# ActivationReasoning

./: .gitignore  LICENSE  README.md  golden_gate.ipynb  pyproject.toml  requirements.txt
activation_reasoning/: __init__.py
activation_reasoning/logic/: __init__.py  config.py
ar/: __init__.py  config.py  evaluation.py  utils.py
ar/model/: __init__.py  activation_reasoning.py  detection.py  logic.py  reasoner.py  search.py  tresholding.py
ar/model/concepts/: __init__.py  topk.py  tree.py
tests/: test_public_api.py
